[gd_scene load_steps=6 format=2]

[ext_resource path="res://Font/Magero.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Menu/Sub/LevelSelector/LevelSelector.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[node name="LevelSelector" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level1" type="MenuButton" parent="."]
margin_left = 2.08112
margin_top = 95.1366
margin_right = 79.0811
margin_bottom = 115.137
custom_fonts/font = SubResource( 1 )
text = "Level 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level2" type="MenuButton" parent="."]
margin_left = 1.78381
margin_top = 112.975
margin_right = 78.7838
margin_bottom = 132.975
custom_fonts/font = SubResource( 2 )
text = "Level 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="MenuButton" parent="."]
margin_left = 2.37842
margin_top = 135.272
margin_right = 54.3784
margin_bottom = 155.272
custom_fonts/font = SubResource( 3 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Level1" to="." method="_on_Level1_pressed"]
[connection signal="pressed" from="Level2" to="." method="_on_Level2_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
